--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Classic Jung Test</h1>
-      <h5 class="w3-padding-32">From <a href="http://similarminds.com/">Similar Minds</a></h5>
+      <h5 class="w3-padding-32">From <a href="http://similarminds.com/">Similar Minds</a> taken on Sept. 1, 2020</h5>
 
       <p class="w3-text-grey">All the other Jung tests on this site are designed to emulate the results of the Myers Briggs test/system. While certainly the most common/popular test system based on Carl Jung's ideas, the Myers Briggs is just one interpretation/adaptation of Jung's Personality Type theory. It certainly has it's own utility (as does any personality system with enough resources and explanatory utility). However, the Myers Briggs test is not entirely faithful to Jung's ideas nor is its design entirely scientific/logical. In any case, this particular test attempts a more faithful and exact adaptation of Jung's ideas (which have their own limitations as well). Don't be surprised if your results are different, this is a different methodology (as such, the Jung type descriptions on this site and others probably won't fit the type listed below as they are based on the Myers Briggs adaptation).
 Your results:</p>
